--- a/environment.yml
+++ b/environment.yml
@@ -4,38 +4,35 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - ipykernel
-  - ipython=8.4.0
-  - jupyter_client=8.6.3
-  - jupyter_core=5.8.1
-  - matplotlib=3.5.3
-  - matplotlib-inline=0.1.7
-  - numpy=1.21.6
-  - scipy=1.7.3
-  - scikit-learn=1.6.1
-  - madmom=0.16.1
-  - librosa=0.9.2
-  - cython=3.1.3
-  - numba=0.55.2
-  - audioread=3.0.1
-  - soundfile=0.13.1
-  - resampy=0.4.3
-  - mido=1.3.3
-  - joblib=1.5.2
-  - pillow=11.3.0
-  - requests=2.32.5
   - pip
+  - ipython
+  - ipykernel
+  - jupyter_client
+  - jupyter_core
+  - matplotlib-inline
+  - psutil
+  - pygments
+  - traitlets
+  - tornado
+  - zeromq
+  - setuptools
+  - wheel
+  - six
+  - packaging
+  - numpy
+  - scipy
+  - scikit-learn
+  - cython
   - pip:
-      - contourpy==1.3.0
-      - cycler==0.12.1
-      - fonttools==4.59.2
-      - idna==3.10
-      - importlib-resources==6.5.2
-      - lazy-loader==0.4
-      - kiwisolver==1.4.7
-      - pycparser==2.22
-      - pyparsing==3.2.3
+      - audioread==3.0.1
+      - librosa==0.9.2
+      - madmom==0.16.1
+      - mido==1.3.3
+      - matplotlib==3.5.3
+      - numba==0.55.2
+      - soundfile==0.13.1
+      - resampy==0.4.3
       - soxr==0.5.0.post1
+      - joblib==1.5.2
       - threadpoolctl==3.6.0
-      - typing-extensions==4.15.0
-      - urllib3==2.5.0
+      - requests==2.32.5
